[backend] add user_handler swagger API
